[package]
authors = ["Mathias Svensson <freaken@freaken.dk>", "Dan Whitman <dwhitman44@gmail.com>"]
categories = ["data-structures", "no-std"]
description = "Container type that allows for temporarily moving out of the container, or permanently moving out and invalidating the container."
documentation = "http://docs.rs/takeable"
homepage = "https://github.com/kyp44/takeable"
keywords = ["move"]
license = "MIT/Apache-2.0/Unlicense"
name = "takeable"
readme = "README.md"
repository = "https://github.com/kyp44/takeable"
version = "0.2.1-dev"
